# cpp-crow-dashboard

./: CMakeLists.txt  Dockerfile  Jenkinsfile
.github/workflows/: build.yml
src/: dashboard.html  main.cpp
